made changes to <aside>

--- a/index.html
+++ b/index.html
@@ -61,33 +61,35 @@
 				</select>
 				<p>Выберите размер</p>
 				<select>
-					<option></option>
-					<option></option>
-					<option></option>
-					<option></option>
-					<option></option>
-					<option></option>
+					<option>50х60 - 30л</option>
+					<option>60х70 - 60л</option>
+					<option>60х85 - 90л</option>
+					<option>70х90 - 100л</option>
+					<option>70х110 - 120л</option>
+					<option>90х110 - 160л</option>
+					<option>90х120 - 180л</option>
+					<option>90х130 - 200л</option>
+					<option>90х140 - 220л</option>
+					<option>100х140 - 260л</option>
+					<option>120х140 - 300л</option>
+					<option>120х150 - 340л</option>
+					<option>130х150 - 360л</option>
+					<option>140х150 - 400л</option>
 				</select>
 				<p>Выберите Микрон</p>
 				<select>
-					<option></option>
-					<option></option>
-					<option></option>
-					<option></option>
-					<option></option>
-					<option></option>
-				</select>
-				<p>Выберите Цвет</p>
-				<select>
-					<option></option>
-					<option></option>
-					<option></option>
-					<option></option>
-					<option></option>
-					<option></option>
+					<option>30-микрон</option>
+					<option>40-микрон</option>
+					<option>50-микрон</option>
+					<option>60-микрон</option>
+					<option>70-микрон</option>
+					<option>80-микрон</option>
+					<option>90-микрон</option>
+					<option>100--микрон</option>
+					<option>120-микрон</option>
 				</select>
 				<p>Введите Количество</p>
-				<input type="number" name="">
+				<input type="number" name="" min="1" placeholder="1">
 
 				<button href="#"><p>РАСЧИТАТЬ СТОИМОСТЬ</p></button>
 
