added text with an image

--- a/index.html
+++ b/index.html
@@ -94,19 +94,21 @@
 				<button href="#"><p>РАСЧИТАТЬ СТОИМОСТЬ</p></button>
 
 				<p id="price">Стоимость:</p>
-
-				
-
 			</div>
 		</aside>
-		
 
-
-
+		<div class="text">
+			<h4>Мешок для мусора ПВД<img src="assets/img/recycle.webp"></h4>
+			<p>Мешки для мусора - это один из самых востребованных серийных продуктов, производство полиэтиленовых мешков позволяет увеличить прочность полиэтилена от 30 до 120 микрон каждой стенки в зависимости от поставленных задач для конкретного изделия из полимеров этилена, технические параметры размера ширины и длинны - позволяют сделать данное пластиковое изделие оптимальным для выдерживания тяжёлых нагрузок при транспортировки, обеспечивать сохранность содержимого, так и избежать обратное действие соприкосновение содержимого с окружающей средой.</p>
+			<h4>Раздельный сбор мусора и цвет пакетов для отходов:</h4>
+			<p>Самый часто используемый цвет полиэтиленового мешка для мусора это черный, предназначен для сбора Органических отходов, подходящий к использованию в домашних условиях с целью сбора для переработки в удобрения.</p>		
+		</div>
 
 
 
 	</section>
+
+	
 
 
 
