Added "in-between" section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" type="image/x-icon" href="assets/img/icon.webp">
+
 </head>
 <body>
 
@@ -98,15 +99,134 @@
 		</aside>
 
 		<div class="text">
-			<h4>Мешок для мусора ПВД<img src="assets/img/recycle.webp"></h4>
+			<h4>Мешок для мусора ПВД<img src="assets/img/recycle.webp" style="transform: translate(5px, 5px);"></h4>
 			<p>Мешки для мусора - это один из самых востребованных серийных продуктов, производство полиэтиленовых мешков позволяет увеличить прочность полиэтилена от 30 до 120 микрон каждой стенки в зависимости от поставленных задач для конкретного изделия из полимеров этилена, технические параметры размера ширины и длинны - позволяют сделать данное пластиковое изделие оптимальным для выдерживания тяжёлых нагрузок при транспортировки, обеспечивать сохранность содержимого, так и избежать обратное действие соприкосновение содержимого с окружающей средой.</p>
 			<h4>Раздельный сбор мусора и цвет пакетов для отходов:</h4>
 			<p>Самый часто используемый цвет полиэтиленового мешка для мусора это черный, предназначен для сбора Органических отходов, подходящий к использованию в домашних условиях с целью сбора для переработки в удобрения.</p>		
+		
+			<div class="columns">
+					<div class="purchase">
+							<h3>3.82руб/1шт</h3>
+							<button>КУПИТЬ МЕШКИ</button>
+							<span><img src="assets/img/exc.png" style="width:15px; height:15px;transform: translate(0, 2.5px);padding-right: 5px;">ВАЖНО: цены на продукцию рассчитаны исходя из производства по ГОСТ, стоимость под маркировкой ТУ запрашивайте у менеджеров</span>
+					</div>
+
+					<div class="payment">
+						<p class="green">Способы оплаты:</p>
+						<p>Наличный расчёт</p>
+						<img src="assets/img/money.webp" style="transform: translate(0, 10px);">
+						<p>Безналичный расчёт</p>
+						<img src="assets/img/visas.webp" style="width: 100px; height: 40px;transform: translate(-1px, 0);">
+						<img src="assets/img/alfa.webp" style="width: 100px; height: 40px;transform: translate(-1px, 0);float: left;"> 
+						 
+					</div>
+							<div class="delivery">
+									<p class="green">Способы доставки:</p>
+									<p>Самовывоз</p>
+									<p>Срочная доставка до двери заказчика</p>
+									<p>Доставка транспортной компанией</p>
+									<img src="assets/img/cdek.png">
+									<img src="assets/img/del.png">
+									<img src="assets/img/pony.png">
+									<img src="assets/img/mek.webp">
+							</div>
+			</div>
+
+
+
+
+
+		</div>
+	</section>
+
+
+	<div class="inbetween">
+		<div class="lorry feature">
+			<div class="circle">
+				<svg style="fill: #008bce; height: 60px; width: 60px;" viewBox="0 -70 512 512" xmlns="http://www.w3.org/2000/svg"><path d="m512 209.890625-54.605469-30.972656-47.882812-114.917969h-74.511719v-64h-335v328.667969h65.671875c7.25 24.628906 30.050781 42.667969 56.996094 42.667969 26.945312 0 49.742187-18.039063 56.992187-42.667969h152.679688c7.25 24.628906 30.046875 42.667969 56.992187 42.667969 26.945313 0 49.746094-18.039063 56.996094-42.667969h65.671875zm-30 88.777344h-34.761719c-6.039062-26.402344-29.699219-46.164063-57.90625-46.164063-24.222656 0-45.09375 14.582032-54.332031 35.417969v-83.492187h106.566406l40.433594 22.933593zm-122.082031 13.253906c0-16.222656 13.195312-29.414063 29.414062-29.414063s29.414063 13.191407 29.414063 29.414063c0 16.21875-13.195313 29.414063-29.414063 29.414063s-29.414062-13.195313-29.414062-29.414063zm-179.347657-13.253906c-6.039062-26.402344-29.699218-46.164063-57.902343-46.164063-28.207031 0-51.867188 19.761719-57.90625 46.164063h-34.761719v-114.824219h162v-30h-162v-27.84375h204.667969v-30h-204.667969v-66h275v268.667969zm-57.902343 42.667969c-16.21875 0-29.414063-13.195313-29.414063-29.414063 0-16.222656 13.195313-29.414063 29.414063-29.414063s29.414062 13.191407 29.414062 29.414063c0 16.21875-13.195312 29.414063-29.414062 29.414063zm212.332031-247.335938h54.511719l33.511719 80.433594h-88.023438zm0 0"/></svg>
+			</div>
+			<h3>ДОСТАВКА ПО ВСЕЙ РОССИИ</h3>
 		</div>
 
+		<div class="coupon feature">
+			<div class="circle">
+				<svg style="fill: #008bce; height: 60px; width: 60px;" viewBox="-21 -21 682.66586 682.66586" xmlns="http://www.w3.org/2000/svg"><path d="m5.710938 462.503906 171.785156 171.78125c7.617187 7.617188 19.96875 7.617188 27.585937 0l145.597657-145.59375-199.371094-199.375-145.597656 145.601563c-7.613282 7.617187-7.613282 19.96875 0 27.585937zm90.679687 33.859375c-15.230469 0-27.574219-12.34375-27.574219-27.574219 0-15.230468 12.34375-27.570312 27.574219-27.570312s27.570313 12.339844 27.570313 27.570312c0 15.230469-12.339844 27.574219-27.570313 27.574219zm149.625-55.144531c15.230469 0 27.582031 12.339844 27.582031 27.570312 0 15.230469-12.351562 27.574219-27.582031 27.574219-15.214844 0-27.570313-12.34375-27.570313-27.574219 0-15.230468 12.355469-27.570312 27.570313-27.570312zm-94.3125-36.507812c0-10.765626 8.734375-19.507813 19.507813-19.507813 10.765624 0 19.507812 8.742187 19.507812 19.507813v123.957031c0 10.765625-8.742188 19.503906-19.507812 19.503906-10.773438 0-19.507813-8.738281-19.507813-19.503906zm0 0"/><path d="m603.574219 19.535156-152.402344-19.378906c-5.988281-.761719-11.992187 1.289062-16.253906 5.554688l-256.007813 256.007812 199.371094 199.371094 256.003906-256.007813c4.269532-4.265625 6.320313-10.269531 5.558594-16.253906l-19.375-152.402344c-1.125-8.824219-8.070312-15.773437-16.894531-16.890625zm-342.070313 256.449219c-7.609375-7.605469-7.609375-19.960937 0-27.582031l86.796875-86.78125c7.621094-7.621094 19.964844-7.621094 27.585938 0 7.617187 7.605468 7.617187 19.960937 0 27.582031l-86.785157 86.78125c-7.609374 7.609375-19.953124 7.648437-27.597656 0zm51.253906 51.257813c-7.621093-7.625-7.621093-19.96875 0-27.585938l142.5-142.5c7.609376-7.621094 19.960938-7.621094 27.582032 0 7.625 7.625 7.625 19.976562 0 27.585938l-142.5 142.5c-7.566406 7.566406-19.933594 7.644531-27.582032 0zm221.339844-91.246094-142.5 142.5c-7.671875 7.671875-20.054687 7.554687-27.585937 0-7.621094-7.621094-7.621094-19.976563 0-27.597656l142.488281-142.484376c7.621094-7.625 19.972656-7.625 27.597656 0 7.605469 7.605469 7.605469 19.960938 0 27.582032zm35.539063-117.960938c-13.15625 13.164063-34.5 13.164063-47.675781 0-13.164063-13.171875-13.164063-34.515625 0-47.675781 13.175781-13.15625 34.519531-13.15625 47.675781 0 13.160156 13.160156 13.160156 34.503906 0 47.675781zm0 0"/></svg>
+			</div>
+			<h3>СИСТЕМА СКИДОК ДЛЯ ОПТОВИКОВ</h3>
+		</div>
+
+		<div class="creditcard feature">
+			<div class="circle">
 
 
-	</section>
+														<?xml version="1.0" encoding="iso-8859-1"?>
+											<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+											 viewBox="0 0 464 464" style="fill: #008bce; height: 60px; width: 60px;" xml:space="preserve">
+											<g>
+											<g>
+												<path d="M424,64H40C17.944,64,0,81.944,0,104v64v192c0,22.056,17.944,40,40,40h384c22.056,0,40-17.944,40-40V168v-64
+													C464,81.944,446.056,64,424,64z M40,80h384c10.416,0,19.216,6.712,22.528,16H17.472C20.784,86.712,29.584,80,40,80z M448,360
+													c0,13.232-10.768,24-24,24H40c-13.232,0-24-10.768-24-24V176h432V360z M448,160H16v-48h432V160z"/>
+											</g>
+											</g>
+											<g>
+											<g>
+												<path d="M200,224H72c-4.424,0-8,3.576-8,8v96c0,4.424,3.576,8,8,8h128c4.424,0,8-3.576,8-8v-96C208,227.576,204.424,224,200,224z
+													 M192,320H80v-80h112V320z"/>
+											</g>
+											</g>
+											<g>
+											<g>
+												<path d="M397.656,258.344c-3.128-3.128-8.184-3.128-11.312,0L360,284.688l-26.344-26.344c-3.128-3.128-8.184-3.128-11.312,0
+													l-32,32c-3.128,3.128-3.128,8.184,0,11.312c3.128,3.128,8.184,3.128,11.312,0L328,275.312l26.344,26.344
+													c1.56,1.56,3.608,2.344,5.656,2.344c2.048,0,4.096-0.784,5.656-2.344l32-32C400.784,266.528,400.784,261.472,397.656,258.344z"/>
+											</g>
+											</g>
+											<g>
+											<g>
+												<path d="M397.656,290.344c-3.128-3.128-8.184-3.128-11.312,0L360,316.688l-26.344-26.344c-3.128-3.128-8.184-3.128-11.312,0
+													l-32,32c-3.128,3.128-3.128,8.184,0,11.312c3.128,3.128,8.184,3.128,11.312,0L328,307.312l26.344,26.344
+													c1.56,1.56,3.608,2.344,5.656,2.344c2.048,0,4.096-0.784,5.656-2.344l32-32C400.784,298.528,400.784,293.472,397.656,290.344z"/>
+											</g>
+											</g>
+											<g>
+											</g>
+											<g>
+											</g>
+											<g>
+											</g>
+											<g>
+											</g>
+											<g>
+											</g>
+											<g>
+											</g>
+											<g>
+											</g>
+											<g>
+											</g>
+											<g>
+											</g>
+											<g>
+											</g>
+											<g>
+											</g>
+											<g>
+											</g>
+											<g>
+											</g>
+											<g>
+											</g>
+											<g>
+											</g>
+											</svg>
+
+			</div>
+			<H3>ГИБКИЕ УСЛОВИЯ ОПЛАТЫ</H3>
+			
+		</div>
+		
+	</div>
 
 	
 
