Added a "maintext" Section

--- a/index.html
+++ b/index.html
@@ -228,6 +228,41 @@
 		
 	</div>
 
+	<div class="maintext">
+		<img src="assets/img/meshki.webp" id="floatright">
+		<p><strong>Мешки для мусора</strong> изготовленные из смеси материалов Полиэтилена Высокого Давления (ПВД) и Полиэтилена Низкого Давления (ПНД) отличаются лучшими показателями прочности и повышенной плотностью. Их основное предназначение – сбор для дальнейшей утилизация бытового мусора. Подходят для мусорных баков определенных размеров.</p>
+
+		<p>Мусорные мешки являются неотъемлемым полезным атрибутом в современном быту и ведении коммерческого и домашнего хозяйства. Это востребованная продукция на предприятиях и в сфере обслуживания. <strong>Купить мешки для мусора в Москве и Московской области</strong> можно у нас на сайте. Для каждого заказчика предусмотрены выгодные условия сотрудничества. В ассортименте представлены лучшие позиции.</p>
+
+		<h2>Технические показатели</h2>
+
+		<p>Оптимальным вариантом для улучшения технических показателей мусорных мешкоф является производство из смеси материалов ПНД и ПВД, смесь такого сырья обеспечивает готовым изделиям эластичность, водонепроницаемость, высокую степень прочности и устойчивость к проколам. Высокий коэффициент прочности достигается путём увеличения толщины каждой из стенок изделия (мкм), улучшенный материал стабильно выдерживает все нагрузки.</p>
+
+		<p>Мешки для мусора являются универсальным изделием для использования в быту, офисе, на крупных производственных и промышленных предприятий. При соблюдении необходимых характеристик при производстве с размерными показателями (ширина-длина) и показателями прочности (микронность) возможно использовать мешки для перевозки медицинских отходов, опасных отходов. Эффективно проводится уборка жидких отходов. Оптимальные габариты мешка делают их незаменимыми в любой сфере жизнедеятельности.</p>
+
+		<h3>Преимущества продукции</h3>
+
+		<p>Главной особенностью мешков является их многофункциональность. Они подходят для сбора, хранения и утилизации самых разнообразных отходов. А к основным их преимуществам относят следующие показатели:</p>
+
+		<ul>
+			<li>Обладание высокой прочностью</li>
+			<li>Выбор размера, для максимально удобного распределения мусора по необходимой схеме</li>
+			<li>Стабильно удерживает неприятный запах и жидкость</li>
+			<li>Равномерное распределение нагрузки на дно</li>
+			<li>Демократичный ценовой сегмент.</li>
+		</ul>
+
+
+		<p>Только на нашем производстве возможно <strong>купить мусорные мешки, по оптовым ценам от производителя в Москве и Московской области.</strong> Благодаря прямому сотрудничеству с производством каждый наш клиент получить мешки высокого качества и именно нужной прочности. Гарантией надежности товара выступает жесткий контроль качества продукции.</p>
+
+		<p>Доставка осуществляется оперативно в любой регион России. Для получения консультации обращайтесь к менеджеру по телефону или через сайт. Для оптовых покупателей действует специальная система скидок.</p>
+		
+		<p>Нужно произвести пакет по собственным характеристикам? Оставляйте заявку, мы проконсультируем Вас!</p>
+
+
+
+	</div>
+
 	
 
 
