Added geo location map and contacts

--- a/index.html
+++ b/index.html
@@ -263,6 +263,24 @@
 
 	</div>
 
+	<div></div>
+
+
+
+	<div class="geo">
+		<div class="contacts">
+			<h3>КОНТАКТЫ</h3>
+			<p>Мешки-для-мусора.рф</p>
+			<p><strong>Адрес:</strong> Московская область, Новорижское шоссе, посёлок Глебовский</p>
+			<p><strong>Телефон:</strong>8(800)551-52-32</p>
+			<p><strong>Электронная почта:</strong> zakaz@whitepack.ru</p>
+			<p><strong>Режим работы:</strong> Пн-Пт 9:00 — 18:00</p>
+			
+		</div>
+
+		<iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d11985.733557463429!2d69.26618758149415!3d41.321188404150526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m5!1s0x38ae8b6a837b0fc9%3A0x9dec73b1093145b2!2sOsiyo+Grand!3m2!1d41.3250311!2d69.26363429999999!4m0!5e0!3m2!1sru!2s!4v1561375726555!5m2!1sru!2s" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+	</div>
+
 	
 
 
