Changed WEBP files to PNG/ and the code as well

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="shortcut icon" type="image/x-icon" href="assets/img/icon.webp">
+	<link rel="shortcut icon" type="image/x-icon" href="assets/img/icon.png">
+	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -45,7 +46,7 @@
 	<section>
 		<aside>
 			<div id="secimg">
-				<img src="assets/img/meshki.webp">
+				<img src="assets/img/meshki.png">
 			</div>
 			<div>
 				<p>Выберите Цвет</p>
@@ -99,7 +100,7 @@
 		</aside>
 
 		<div class="text">
-			<h4>Мешок для мусора ПВД<img src="assets/img/recycle.webp" style="transform: translate(5px, 5px);"></h4>
+			<h4>Мешок для мусора ПВД<img src="assets/img/recycle.png" style="transform: translate(5px, 5px);"></h4>
 			<p>Мешки для мусора - это один из самых востребованных серийных продуктов, производство полиэтиленовых мешков позволяет увеличить прочность полиэтилена от 30 до 120 микрон каждой стенки в зависимости от поставленных задач для конкретного изделия из полимеров этилена, технические параметры размера ширины и длинны - позволяют сделать данное пластиковое изделие оптимальным для выдерживания тяжёлых нагрузок при транспортировки, обеспечивать сохранность содержимого, так и избежать обратное действие соприкосновение содержимого с окружающей средой.</p>
 			<h4>Раздельный сбор мусора и цвет пакетов для отходов:</h4>
 			<p>Самый часто используемый цвет полиэтиленового мешка для мусора это черный, предназначен для сбора Органических отходов, подходящий к использованию в домашних условиях с целью сбора для переработки в удобрения.</p>		
@@ -114,10 +115,10 @@
 					<div class="payment">
 						<p class="green">Способы оплаты:</p>
 						<p>Наличный расчёт</p>
-						<img src="assets/img/money.webp" style="transform: translate(0, 10px);">
+						<img src="assets/img/money.png" style="transform: translate(0, 10px);">
 						<p>Безналичный расчёт</p>
-						<img src="assets/img/visas.webp" style="width: 100px; height: 40px;transform: translate(-1px, 0);">
-						<img src="assets/img/alfa.webp" style="width: 100px; height: 40px;transform: translate(-1px, 0);float: left;"> 
+						<img src="assets/img/visas.png" style="width: 100px; height: 40px;transform: translate(-1px, 0);">
+						<img src="assets/img/alfa.png" style="width: 100px; height: 40px;transform: translate(-1px, 0);float: left;"> 
 						 
 					</div>
 							<div class="delivery">
@@ -128,7 +129,7 @@
 									<img src="assets/img/cdek.png">
 									<img src="assets/img/del.png">
 									<img src="assets/img/pony.png">
-									<img src="assets/img/mek.webp">
+									<img src="assets/img/mek.png">
 							</div>
 			</div>
 
@@ -227,7 +228,7 @@
 	</div>
 
 	<div class="maintext">
-		<img src="assets/img/meshki.webp" id="floatright">
+		<img src="assets/img/meshki.png" id="floatright">
 		<p><strong>Мешки для мусора</strong> изготовленные из смеси материалов Полиэтилена Высокого Давления (ПВД) и Полиэтилена Низкого Давления (ПНД) отличаются лучшими показателями прочности и повышенной плотностью. Их основное предназначение – сбор для дальнейшей утилизация бытового мусора. Подходят для мусорных баков определенных размеров.</p>
 
 		<p>Мусорные мешки являются неотъемлемым полезным атрибутом в современном быту и ведении коммерческого и домашнего хозяйства. Это востребованная продукция на предприятиях и в сфере обслуживания. <strong>Купить мешки для мусора в Москве и Московской области</strong> можно у нас на сайте. Для каждого заказчика предусмотрены выгодные условия сотрудничества. В ассортименте представлены лучшие позиции.</p>
@@ -287,7 +288,7 @@
 		</div>
 
 		<div id="img">
-				<img src="assets/img/arrow.webp">
+				<img src="assets/img/arrow.png">
 		</div>
 
 		<div id="callus">
